cabal-version:   3.0
name:            radon-2d
version:         0.1.0.0

-- synopsis:
-- description:
license:         MIT
license-file:    LICENSE
author:          Anut-py
category:        Game
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:  MyLib
  build-depends:    base >=4.0 && <5.0
  hs-source-dirs:   src
  default-language: Haskell2010
